# digDugAllegro5

./: .gitignore  App.cpp  CMakeLists.txt  README.MD  Screen.cpp  Screen.h  _const.cpp  _const.h  app.cpp  app.h  const.h  main.cpp  makefile  map.cpp  map.h  player.cpp  player.h
assets/data/maps/: level0.tmx  level1.tmx  levelX.tmx  long.tmx
assets/map/: 00.map
cmake/: Utils.cmake
entities/: Enemy.cpp  Enemy.h  Entities.cpp  Entities.h  Harpoon.cpp  Harpoon.h  Player.cpp  Player.h  entities.cpp
map/: Map.cpp  Map.h  Tile.cpp  Tile.h
screen/: Screen.cpp  Screen.h
src/: App.cpp  App.h  End.cpp  End.h  Enemy.cpp  Enemy.h  Entities.h  GestoreSchermi.cpp  GestoreSchermi.h  Harpoon.cpp  Harpoon.h  Infomsg.cpp  Infomsg.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Object.cpp  Object.h  Player.cpp  Player.h  Screen.cpp  Screen.h  Splash.cpp  Splash.h  Tile.cpp  Tile.h  Timer.cpp  Timer.h  const.h  main.cpp
